--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
+google-generativeai>=0.7.0
 streamlit
 pandas
-graphviz
-matplotlib
-requests
-pandas
-openpyxl
-streamlit-cropper
-pillow
-streamlit-folium
+gspread
+oauth2client
 folium
+streamlit-folium
 geopy
 Pillow
-google-generativeai>=0.7.0
